@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T00:39:18Z",
-  "count" : 21,
+  "timestamp" : "2022-05-31T00:47:02Z",
+  "count" : 12,
   "count_minmax" : [ 11, 21 ],
-  "count_decinc" : [ -0, +21 ],
+  "count_decinc" : [ -9, +21 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
