@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-30T16:13:11Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-05-31T00:47:02Z",
+  "count" : 4,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
