@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-05-30T16:13:11Z",
-  "count_outdated" : 331,
-  "uniques_outdated" : 14,
-  "count" : 376,
+  "timestamp" : "2022-05-31T00:47:02Z",
+  "count_outdated" : 350,
+  "uniques_outdated" : 15,
+  "count" : 386,
   "uniques" : 21,
   "views" : [
     {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 19 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 21,
+      "count": 12,
       "count_minmax": [ 11, 21 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -49,8 +42,8 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 4,
+      "count_minmax": [ 2, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
