@@ -1,15 +1,10 @@
 {
-  "count": 45,
+  "count": 36,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 21,
+      "count": 12,
       "uniques": 1
     },
     {
@@ -34,7 +29,7 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 2,
+      "count": 4,
       "uniques": 1
     }
   ]
